Give better and more visible errors on log in, fixes #23

--- a/src/pages/LogInPage/LoginPage.css
+++ b/src/pages/LogInPage/LoginPage.css
@@ -54,3 +54,8 @@
 .login-form-link-text {
   margin-top: 24px;
 }
+
+.login-form-error {
+  color: #e60000;
+  font-weight: bold;
+}
